--- a/Appworks/Appworks.csproj
+++ b/Appworks/Appworks.csproj
@@ -51,12 +51,15 @@
     <Compile Include="Application\AppInitEventArgs.cs" />
     <Compile Include="Application\AppRuntime.cs" />
     <Compile Include="Application\IApp.cs" />
+    <Compile Include="DisposableObject.cs" />
+    <Compile Include="IServiceLocator.cs" />
     <Compile Include="Password\HashPasswordUtils.cs" />
     <Compile Include="Password\HashPasswordBase.cs" />
     <Compile Include="Password\IHashPassword.cs" />
     <Compile Include="Password\SHA256HashPassword.cs" />
     <Compile Include="Password\SHA512HashPassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceLocator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
