--- a/src/Appworks.Repositories.Dapper/Appworks.Repositories.Dapper.csproj
+++ b/src/Appworks.Repositories.Dapper/Appworks.Repositories.Dapper.csproj
@@ -4,14 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7559B6B1-F48F-4569-B167-13516C7E70E5}</ProjectGuid>
+    <ProjectGuid>{E6FA5C78-7659-4A56-8C8B-E0AE8D480CC1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Appworks</RootNamespace>
-    <AssemblyName>Appworks</AssemblyName>
+    <RootNamespace>Appworks.Repositories.Dapper</RootNamespace>
+    <AssemblyName>Appworks.Repositories.Dapper</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -32,11 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac">
-      <HintPath>..\packages\Autofac.3.3.1\lib\net40\Autofac.dll</HintPath>
-    </Reference>
-    <Reference Include="Autofac.Configuration">
-      <HintPath>..\packages\Autofac.Configuration.3.3.0\lib\net40\Autofac.Configuration.dll</HintPath>
+    <Reference Include="Dapper">
+      <HintPath>..\..\packages\Dapper.1.40\lib\net40\Dapper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,30 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Application\App.cs" />
-    <Compile Include="Application\AppInitEventArgs.cs" />
-    <Compile Include="Application\AppRuntime.cs" />
-    <Compile Include="Application\IApp.cs" />
-    <Compile Include="DisposableObject.cs" />
-    <Compile Include="IServiceLocator.cs" />
-    <Compile Include="IUnitOfWork.cs" />
-    <Compile Include="PagedList.cs" />
-    <Compile Include="Password\HashPasswordUtils.cs" />
-    <Compile Include="Password\HashPasswordBase.cs" />
-    <Compile Include="Password\IHashPassword.cs" />
-    <Compile Include="Password\SHA256HashPassword.cs" />
-    <Compile Include="Password\SHA512HashPassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\IRepository.cs" />
-    <Compile Include="Repository\IRepositoryContext.cs" />
-    <Compile Include="ServiceLocator.cs" />
-    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
