--- a/src/Appworks/Appworks.csproj
+++ b/src/Appworks/Appworks.csproj
@@ -56,8 +56,8 @@
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="PagedList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\IRepository.cs" />
-    <Compile Include="Repository\IRepositoryContext.cs" />
+    <Compile Include="IRepository.cs" />
+    <Compile Include="IRepositoryContext.cs" />
     <Compile Include="ServiceLocator.cs" />
     <Compile Include="SortAs.cs" />
     <Compile Include="UnitOfWork.cs" />
@@ -66,7 +66,9 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
