--- a/src/Appworks.Repositories.Dapper/Appworks.Repositories.Dapper.csproj
+++ b/src/Appworks.Repositories.Dapper/Appworks.Repositories.Dapper.csproj
@@ -44,10 +44,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DapperContext.cs" />
+    <Compile Include="DapperRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Appworks\Appworks.csproj">
+      <Project>{7559B6B1-F48F-4569-B167-13516C7E70E5}</Project>
+      <Name>Appworks</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
