--- a/src/Appworks/app.config
+++ b/src/Appworks/app.config
@@ -8,4 +8,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <configSections>
+    <section name="ProviderSection" type="Appworks.RepositoryProviderConfigurationSection, Appworks"/>
+  </configSections>
+  <ProviderSection Repository="Appworks.Repositories.Dapper.DapperRepository"
+                   RepositoryContext="Appworks.Repositories.Dapper.DapperContext"></ProviderSection>
 </configuration>
