--- a/tests/Appworks.Tests/Appworks.Tests.csproj
+++ b/tests/Appworks.Tests/Appworks.Tests.csproj
@@ -62,9 +62,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryFactoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Appworks.Repositories.Dapper\Appworks.Repositories.Dapper.csproj">
+      <Project>{e6fa5c78-7659-4a56-8c8b-e0ae8d480cc1}</Project>
+      <Name>Appworks.Repositories.Dapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\Appworks\Appworks.csproj">
+      <Project>{7559B6B1-F48F-4569-B167-13516C7E70E5}</Project>
+      <Name>Appworks</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
