--- a/src/Appworks/app.config
+++ b/src/Appworks/app.config
@@ -11,6 +11,6 @@
   <configSections>
     <section name="ProviderSection" type="Appworks.RepositoryProviderConfigurationSection, Appworks"/>
   </configSections>
-  <ProviderSection Repository="Appworks.Repositories.Dapper.DapperRepository"
-                   RepositoryContext="Appworks.Repositories.Dapper.DapperContext"></ProviderSection>
+  <ProviderSection Repository="Appworks.Repositories.Dapper.DapperRepository`1, Appworks.Repositories.Dapper"
+                   RepositoryContext="Appworks.Repositories.Dapper.DapperContext, Appworks.Repositories.Dapper"></ProviderSection>
 </configuration>
