--- a/tests/Appworks.Tests/Appworks.Tests.csproj
+++ b/tests/Appworks.Tests/Appworks.Tests.csproj
@@ -53,6 +53,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
