--- a/tests/Appworks.UnitTests/App.config
+++ b/tests/Appworks.UnitTests/App.config
@@ -7,6 +7,6 @@
                    RepositoryContext="Appworks.Repositories.Dapper.DapperContext, Appworks.Repositories.Dapper"></ProviderSection>
 
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Server=.; Database=Test; User Id=sa; Password=~zl.; MultipleActiveResultSets=true; Persist Security Info=true;" providerName="System.Data.SqlClient"/>
+    <add name="ConnectionString" connectionString="Server=.; Database=Master; User Id=sa; Password=~zl.; MultipleActiveResultSets=true; Persist Security Info=true;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
