--- a/tests/Appworks.UnitTests/Appworks.UnitTests.csproj
+++ b/tests/Appworks.UnitTests/Appworks.UnitTests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -60,6 +61,7 @@
     <Compile Include="RepositoryFactoryUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryRuntimeUnitTest.cs" />
+    <Compile Include="AllotmentUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Appworks.Repositories.Dapper\Appworks.Repositories.Dapper.csproj">
