--- a/tests/Appworks.UnitTests.Password/Appworks.UnitTests.Password.csproj
+++ b/tests/Appworks.UnitTests.Password/Appworks.UnitTests.Password.csproj
@@ -58,9 +58,9 @@
     <Compile Include="SHA512UnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Appworks.Password\Appworks.Password.csproj">
-      <Project>{b8337b0d-9b22-43de-9d44-f32ae7acd364}</Project>
-      <Name>Appworks.Password</Name>
+    <ProjectReference Include="..\..\src\Appworks.Utils\Appworks.Utils.csproj">
+      <Project>{1850db9f-b2ab-4b8d-9c74-5687d4717c36}</Project>
+      <Name>Appworks.Utils</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
