--- a/src/Appworks.DbSchema/Appworks.DbSchema.csproj
+++ b/src/Appworks.DbSchema/Appworks.DbSchema.csproj
@@ -39,6 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbColumn.cs" />
+    <Compile Include="DbColumnCollection.cs" />
+    <Compile Include="UnitedColumnTypeObject.cs" />
+    <Compile Include="DbObject.cs" />
+    <Compile Include="GenericDictionary.cs" />
+    <Compile Include="ObjectHashtable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
