--- a/src/Appworks.DbSchema/Appworks.DbSchema.csproj
+++ b/src/Appworks.DbSchema/Appworks.DbSchema.csproj
@@ -50,6 +50,9 @@
     <Compile Include="DbView.cs" />
     <Compile Include="DbViewCollection.cs" />
     <Compile Include="IDbSchemaProvider.cs" />
+    <Compile Include="SqlClient\ISqlSchemaProvider.cs" />
+    <Compile Include="SqlClient\SqlSchemaProvider.cs" />
+    <Compile Include="SqlClient\SqlSchemaProviderBase.cs" />
     <Compile Include="UnitedColumnTypeObject.cs" />
     <Compile Include="DbObject.cs" />
     <Compile Include="GenericDictionary.cs" />
